--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 <h1>My Acadimic Information</h1>
   <br>
-  <p> <strong> Name : ANAM IBN JAFAR </strong> <p>
-  <p> <strong> Home District : CHANDPUR </strong> </p>
+  <p> <strong> Name : Abir Ahmed</strong> <p>
+  <p> <strong> Home District : MADARIPUR </strong> </p>
   <p> <strong> Studing CSE in UIU </strong> </p>
   <p> <strong> STUDENT ID : 011192026 </strong> </p>
   <br>
@@ -30,13 +30,13 @@
         <td> SSC </td>
         <td> 2016 </td>
         <td> 5.00 </td>
-        <td> <a href="https://www.facebook.com/akshajigonj/"> AL KAWSAR SCHOOL </a> </td>
+        <td> <a href="https://www.facebook.com/akshajigonj/"> Khilgaon Govt. High School </a> </td>
       </tr>
       <tr>
         <td> HSC </td>
         <td> 2018 </td>
-        <td> 4.58 </td>
-        <td> <a href="https://www.dhakacitycollege.edu.bd/"> DHAKA CITY COLLEGE </a> </td>
+        <td> 4.83</td>
+        <td> <a href="https://www.dhakacitycollege.edu.bd/"> Quality Education COLLEGE </a> </td>
       </tr>
     </tbody>    
   </table>
