--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <td> SSC </td>
         <td> 2016 </td>
         <td> 5.00 </td>
-        <td> <a href="https://www.facebook.com/akshajigonj/"> Khilgaon Govt. High School </a> </td>
+        <td> <a href="https://www.facebook.com/KGHS1219/"> Khilgaon Govt. High School </a> </td>
       </tr>
       <tr>
         <td> HSC </td>
         <td> 2018 </td>
         <td> 4.83</td>
-        <td> <a href="https://www.dhakacitycollege.edu.bd/"> Quality Education COLLEGE </a> </td>
+        <td> <a href="https://www.facebook.com/QualityEducationCollege.QEC/"> Quality Education COLLEGE </a> </td>
       </tr>
     </tbody>    
   </table>
