--- a/page2.html
+++ b/page2.html
@@ -10,17 +10,17 @@
   <h2> MY FAVOURITE BOOK </h2>
   <p> My favourite book is a novel written by <strong> HUMAYUN AHMED </strong>.The name of the novek is <strong> DEBI </strong> </p>
   <br>
-    <img src=""> 
+    <img src="debi.jpg"> 
     <br>
   <h3> FAVOURITE SPORT </h3>
   <p> My favourite sport is <strong> Football </strong>. My favourite team is <strong> ARGENTINA </strong> </p>
   <br>
-    <img src="">
+    <img src="argentina.jpg">
   <br>
   <h4> MY FAVOURITE MOVIE </h4>
-  <p> My favourite movie is <strong> 3 IDIOTS </strong>.The director of the movie is <strong> JONATHAN DEMME </strong>.</p>
+  <p> My favourite movie is <strong> 3 IDIOTS </strong>.The director of the movie is <strong> RAJKUMARI HIRANI </strong>.</p>
   <br>
-  <img src="bb.jpg">
+  <img src="3idots.jpg">
   <br>
 <a href="index.html"> Return to Homepage</a>
  
